--- a/src/style.css
+++ b/src/style.css
@@ -2,18 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Default font - English (Inter) */
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   overflow: hidden;
-  font-family: "Noto Serif Khmer", serif;
+  font-family: "Inter", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Khmer font - applied when language is Khmer */
+html[lang="km"], 
+html[lang="km"] body,
+html[lang="km"] * {
+  font-family: "Noto Sans Khmer", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 #app {
